--- a/style.css
+++ b/style.css
@@ -1,42 +1,3 @@
-.seccio1{
-    background-color: rgb(89,41,65,0.7);
-    border: black 5px dashed;
-    color: black;
-    float: left;
-    height: 650px;
-    width: 31.6%;
-    text-align: center;
-    font-size: 60px;
-    border-style: dashed;
-    font-family: cursive;
-}
-
-.seccio2{
-    background-color: rgb(178, 211, 168,0.7);
-    border: black 5px dashed;
-    border-style: dashed;
-    color: black;
-    float: left;
-    height: 650px;
-    width: 31.6%;
-    font-size: 60px;
-    text-align: center;
-    font-family: cursive;
-}
-
-.seccio3{
-    background-color: rgb(237, 229, 166,0.7);
-    border: black 5px dashed;
-    color: black;
-    float: left;
-    height: 650px;
-    width: 31.6%;
-    font-size: 60px;
-    text-align: center;
-    font-family: cursive;
-    overflow: hidden;
-}
-
 body {
     height: 650px;
     width: 95%;
@@ -46,7 +7,47 @@ body {
     background-image: url("Pictures/wallpaper.jpg");
     background-position: center;
 }
-
+.seccio1{
+    background-color: rgba(132, 130, 143,0.7);
+    border: black 5px dashed;
+    color: black;
+    float: left;
+    height: 650px;
+    width: 31.6%;
+    text-align: center;
+    font-size: 60px;
+    border-style: dashed;
+    font-family: cursive;
+    overflow: hidden;
+    text-decoration-line: underline;
+}
+.seccio2{
+    background-color: rgba(132, 130, 143,0.7);
+    border: black 5px dashed;
+    border-style: dashed;
+    color: black;
+    float: left;
+    height: 650px;
+    width: 31.6%;
+    font-size: 60px;
+    text-align: center;
+    font-family: cursive;
+    overflow: hidden;
+    text-decoration-line: underline;
+}
+.seccio3{
+    background-color: rgba(132, 130, 143,0.7);
+    border: black 5px dashed;
+    color: black;
+    float: left;
+    height: 650px;
+    width: 31.6%;
+    font-size: 60px;
+    text-align: center;
+    font-family: cursive;
+    overflow: hidden;
+    text-decoration-line: underline;
+}
 
 .afegir {
     font-size: 55px;
@@ -63,9 +64,7 @@ body {
     transition: all 300ms ease 0ms;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     z-index: 99;
-    
 }
-
 
 .afegir:hover {
     background-color: rgb(229, 190, 237); /* Color de fondo al pasar el cursor */
@@ -73,68 +72,56 @@ body {
     transform: translateY(-10px);
 }
 
-.second {
+.editar {
     border-color: #3498db;
     color: #fff;
     box-shadow: 0 0 60px 60px #3498db inset, 0 0 0 0 #3498db;
     -webkit-transition: all 150ms ease-in-out;
     transition: all 150ms ease-in-out;
-    font-size: 10px;
-    width: 50px;
-    height: 50px;
+    font-size: 75%;
+    width: 25px;
+    height: 25px;
     border-radius: 50%;
-    position: relative;
-  }
-  .second:hover {
+}
+.editar:hover {
     box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
     transform: translateY(-8px);   
-    }
-    
-.one {
-        border-color: #3498db;
-        color: #fff;
-        box-shadow: 0 0 60px 60px #3498db inset, 0 0 0 0 #3498db;
-        -webkit-transition: all 150ms ease-in-out;
-        transition: all 150ms ease-in-out;
-        font-size: 10px;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        position: relative;
-      }
-    .one:hover {
-        box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
-        transform: translateY(-8px);   
-        }
-
-
-
-
-h2,p{
-font-size:100%;
-font-weight:normal;
 }
-ul,li{
-list-style:none; /* quito el punto de la lista */
+    
+.eliminar {
+    border-color: #3498db;
+    color: #fff;
+    box-shadow: 0 0 60px 60px #3498db inset, 0 0 0 0 #3498db;
+    -webkit-transition: all 150ms ease-in-out;
+    transition: all 150ms ease-in-out;
+    font-size: 75%;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    position: left;
+}
+.eliminar:hover {
+    box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
+    transform: translateY(-8px);   
+}
+
+h4{
+    overflow: scroll;
+    width:90%;
+    
 }
 ul{
-overflow:hidden;  /* ocultar el texto que salga de la Nota */
-padding:3em;
+    overflow:scroll;  /* ocultar el texto que no salga de la nota*/
+    background-color: #592941;
+    list-style:none;
+    font-family: 'Reenie Beanie', cursive;
+    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.9);
 }
+
 ul li a{
-
-text-decoration:none;
-color:#000;
-background-image: url("Pictures/prova.png");
-background-position: center;
-display:block;  /* genera un bloque por cada li */
-height:10em; /* altura de la Nota */
-width:10em;  /* anchura de la Nota */
-padding:1em;  /* espacio entre texto de las Notas */
-
-
-}
-ul li{
-margin:1em;  /* espacio entre las notas */
-float:left;  /* alinear notas */
+    text-decoration:none;
+    color: #000;
+    display:block;  /* genera un bloque por cada li */
+    height: 250px; /* altura de la Nota */
+    width: 300px;  /* anchura de la Nota */
 }
