--- a/style.css
+++ b/style.css
@@ -125,3 +125,12 @@ ul li a{
     height: 250px; /* altura de la Nota */
     width: 300px;  /* anchura de la Nota */
 }
+
+ul:hover,ul:focus{
+    -moz-box-shadow:10px 10px 7px rgba(0,0,0,.7);
+    -webkit-box-shadow: 10px 10px 7px rgba(0,0,0,.7);
+    box-shadow:10px 10px 7px rgba(0,0,0,.7);
+    transform: scale(1.25);
+    position:relative;
+    z-index:5;
+   }
