--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
 .seccio3{
     background-color: rgba(132, 130, 143,0.7);
     border: black 5px dashed;
+    border-style: dashed;
     color: black;
     float: left;
     height: 650px;
@@ -48,7 +49,7 @@ body {
     font-size: 100px;
     font-size: 4vw;
     text-align: center;
-    font-family: cursive;
+    font-family: 100%;
     overflow: hidden;
     text-decoration-line: underline;
 }
@@ -85,8 +86,8 @@ body {
     -webkit-transition: all 150ms ease-in-out;
     transition: all 150ms ease-in-out;
     font-size: 75%;
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     position: relative;
     right: -250px;
@@ -101,14 +102,14 @@ body {
 
     
 .eliminar {
-    border-color: #f01515;
+    border-color: #bd1414;
     color: #fff;
     box-shadow: 0 0 60px 60px #760000 inset, 0 0 0 0 #fb0303;
     -webkit-transition: all 150ms ease-in-out;
     transition: all 150ms ease-in-out;
     font-size: 75%;
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     position: relative;
     right: -180px;
