--- a/style.css
+++ b/style.css
@@ -123,17 +123,6 @@ h4{
     width:90%;  
 }
 
-h1{
-    font-size:210%;
-    font-weight:bold;
-}
-
-h2,h4{
-    font-size:180%;
-    font-weight:normal;
-}
-
-
 ul{
     overflow:none;  /* ocultar el texto que no salga de la nota*/
     background-color: #592941;
@@ -156,4 +145,30 @@ ul:hover,ul:focus{
     box-shadow:10px 10px 7px rgba(0,0,0,.7);
     transform: scale(1.25);
     z-index:5;
+}
+
+.formulari{
+    background-color: rgba(132, 130, 143,0.7);
+    border: black 5px solid;
+    color: black;
+    float: left;
+    height: 450px;
+    width: 31.6%;
+    text-align: left;
+    font-size: 4vh;
+    border-style: solid;
+    font-family: 100%;
+}
+.titol{
+    background-color: rgba(132, 130, 143,0.7);
+    border: black 5px solid;
+    color: black;
+    float: center;
+    width: 84%;
+    text-align: center;
+    font-size: 6vh;
+    border-style: solid;
+    font-family: 100%;
+    grid-row: inherit;
+
 }
